# Pyclip

./: pyclip.py  pyproject.toml
